# chained

./: Cargo.toml  README.md
src/: lib.rs  libdoc.md
tests/: basic.rs
