[package]
name = "chained"
description = "A library for lazily chaining functions"
categories = ["rust-patterns", "data-structures", "no-std"]
keywords = ["chaining", "pipe", "pipeline", "lazy", "functional"]
readme = "README.md"
authors = ["Maaz Ahmed <mzahmed95@gmail.com>"]
repository = "https://github.com/VoltaireNoir/chained"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
